--- a/src/index.css
+++ b/src/index.css
@@ -259,13 +259,6 @@ body {
   background: var(--primary-100);
 }
 
-.person img{
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-  box-shadow: var(--shadow-3);
-}
-
 /* * {
   border: 2px solid red;
 } */
@@ -278,5 +271,43 @@ main {
 }
 
 .container {
-  border: 2px solid red;
+  
+  width: 90vw;
+  max-width: var(--fixed-width);
+  margin-top: 5rem 0;
+  background:  white;
+  border-radius: var(--borderRadius);
+  padding: 1.5rem 2rem;
+  box-shadow: var(--shadow-1);
 }
+
+.container h3{
+  margin-bottom: 2rem;
+}
+
+.person{
+  border: 2px solid red;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 0.75rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+}
+
+.person img{
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  box-shadow: var(--shadow-3);
+}
+
+.person h4{
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+
+}
+
+.person p{
+  color: var(--grey-500)
+}
+
